User-list overflow fixed

--- a/frontend/src/app/views/tournament-list/tournament-roles/tournament-roles.component.scss
+++ b/frontend/src/app/views/tournament-list/tournament-roles/tournament-roles.component.scss
@@ -4,6 +4,10 @@
   height: 80vh;
 }
 
+.users-container {
+  overflow: auto;
+}
+
 .roles-container div {
   flex: 1
 }
@@ -23,7 +27,11 @@
 
 .roles {
   overflow: auto;
-  padding-left: 20px;
+  padding-left: 10px;
+}
+
+.user-list {
+  padding-right: 10px;
 }
 
 //Padding between roles
